name:                fastcgi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/benizi/haskell-fastcgi
license:             MIT
license-file:        LICENSE
author:              Benjamin R. Haskell
-- maintainer:
copyright:           2017
-- category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fastcgi
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Codec.FastCGI
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary == 0.8.*
                     , bytestring == 0.10.*
                     , conduit == 1.2.*
                     , conduit-combinators == 1.1.*
                     , conduit-extra == 1.2.*
                     , containers == 0.5.*
                     , data-default == 0.7.*
                     , mtl == 2.2.*
                     , process == 1.4.*
  ghc-options:         -Wall
